--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <title>Icons</title>
     <link rel="stylesheet" href="css/css.css">
-    <link rel="stylesheet" type="text/css" href="node_modules/monk-grid/monk-framework.css">
+    <link rel="stylesheet" type="text/css" href="css/monk-framework.min.css">
     <link rel="stylesheet" type="text/css" href="img/icons/big-data-and-web-analytics/font/flaticon.css">
 
   </head>
@@ -18,8 +18,8 @@
           </div>
         </div>
         <div class="item-menu flex">
-          <div class="container full-height center-center">
-            <div class="menu-links container center-center some-tablet">
+          <div class="over container full-height center-center">
+            <div class="menu-links container center-center some">
               <div class="menu-item">
                 <a href="#" class="selct">Get-started</a>
               </div>
@@ -34,14 +34,14 @@
         </div>
         <div class="item-menu ">
           <div class="container full-height center-center">
-            <div class="icon-link">
+            <div class="icon-link mg10">
               <img src="img/icons/svg/search2.svg" width="30" alt="">
             </div>
           </div>
         </div>
         <div class="item-menu">
-          <div class="container full-height center-center bg-danger aparece-tablet" style="display: none">
-            <div class="icon-link">
+          <div class="container full-height center-center aparece-tablet">
+            <div class="icon-link ">
               <img src="img/icons/svg/menu.svg" width="30" alt="">
             </div>
           </div>
@@ -64,7 +64,7 @@
               <input type="text" ng-model="search.$" name="search" value="" placeholder="Search..." class="inpt">
             </div>
             <div class="search">
-              <img src="img/icons/svg/search.svg" width="30" alt="">
+              <img src="img/icons/svg/search.svg" width="20" alt="">
             </div>
           </div>
         </div>
