--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html ng-app="iconApp">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Icons</title>
     <link rel="stylesheet" href="css/css.css">
     <link rel="stylesheet" type="text/css" href="css/monk-framework.min.css">
