--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
   <title>Icons</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
   <link rel="stylesheet" href="css/css.css">
-  <link rel="stylesheet" type="text/css" href="node_modules/monk-grid/monk-framework.css">
+  <link rel="stylesheet" type="text/css" href="css/monk-framework.min.css">
   <link rel="stylesheet" type="text/css" href="img/icons/big-data-and-web-analytics/font/flaticon.css">
 
 
